# e3sm_diags

./: .Dockerfile.un~  .gitignore  .pre-commit-config.yaml  .setup.py.un~  AGENTS.md  AI_DEVELOPMENT_INSTRUCTIONS.md  Dockerfile  Makefile  README.md  enso.cfg  index.html  pyproject.toml  run.py  run_enso_diags.py  run_native_grid_test.py  run_script.sh  setup.cfg  setup.py  tbump.toml  unique_errors_main_run.txt  unique_errors_phase3.txt
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: build_workflow.yml  e3sm_unified_latest_release_compat.yml  release_workflow.yml  update_image_baselines.yml
1set/viewer/: index.html  index.json
acme_diags/: .__init__.py.un~  .acme_viewer.py.un~  .lat_lon_vector.cfg.un~  .lat_lon_vector.py.un~  .lat_lon_vector_model_vs_obs.cfg.un~  .lat_lon_vector_u.cfg.un~  .lat_lon_vector_u850.cfg.un~  .meridional_mean_2d.cfg.un~  .test_meridional_mean_2d.py.un~  .test_vector.py.un~  PET0.ESMF_LogFile  acme_diags_driver.py  acme_viewer.py~  cloud_test.json  cloud_test_full.json  lat_lon_vector.cfg~  lat_lon_vector_model_vs_obs.cfg~  lat_lon_vector_u.cfg  lat_lon_vector_u.cfg~  lat_lon_vector_u850.cfg~  lwcfsrf.json  meridional_mean_2d.cfg  meridional_mean_2d.cfg~  mydiags_3457cosp.py  mydiags_cosp_histogram.py  mydiags_peter.py  mydiags_tier1b_cloud.py  mydiags_v1.py  obs_peter.json  set3_4_5_7_cosp.json  set3_diags.json  set3_test.json  set4_diags.json  set5_demo.json  set5_test.json  set7_test.json  setcosp.json  surfaceheatflux.json  table.cfg  table_multi.cfg  (+7 more)
acme_diags.egg-info/: PKG-INFO  SOURCES.txt
acme_diags/acme_diags_demo/: index.json
acme_diags/acme_diags_demo_vcs/: forchsarles.yml  index.json
acme_diags/acme_diags_demo_vcs210/: index.json
acme_diags/cloud_hist/: index.html  index.json
acme_diags/derivations/: .acme.py.un~  CMOR_table_full.py  acme.py  acme.py~  default_regions.py
acme_diags/driver/: .lat_lon_vector_driver.py.un~  .meridional_mean_2d_driver.py.un~  .zonal_mean_2d_driver.py.un~  annual_cycle_zonal_mean_driver.py  arm_diags_driver.py  diurnal_cycle_driver.py  enso_diags_driver.py  lat_lon_newobs_full.json  lat_lon_vector_driver.py  lat_lon_vector_driver.py~  meridional_mean_2d_driver.py~  qbo_driver.py  tc_analysis_driver.py  zonal_mean_2d_driver.py~
acme_diags/myresults_05_30_cartopy/: index.html  index.json
acme_diags/newobs/: index.json
acme_diags/oldfiles/: newobs_era.json  newobs_rlut.tar  newobs_vs_oldobs.json
acme_diags/parameter/: __init__.py  arm_diags_annual_cycle_parameter.py  arm_diags_parameter.py  core_parameter.py  diurnal_cycle_parameter.py  enso_diags_parameter.py
acme_diags/parser/: __init__.py  diurnal_cycle_parser.py
acme_diags/plot/: __init__.py
acme_diags/plotset5/: mydiags.json  mydiags_derived_var.json  mydiags_derived_var.py  obs_info.json  obs_info_dictionary.json  output_vcs  read_json.py  set5_ANN_PRECT_GPCP_model_0129.py  set5_diags_AMWG_reanalysis.json  set5_diags_CERES-EBAF.json  set5_diags_GPCP.json  set5_diags_JRA25.json  set5_diags_MERRA.json  set5_diags_MERRA_domains.json  set5_diags_demo.json  set5_driver.py.lprof  set5parameter_full.py  set7_diags_icefrac.json  set7_diags_ref.json
acme_diags/set3/: index.json
acme_diags/set4/: index.html  index.json
acme_diags/set4_all/: index.json
acme_diags/set5/: index.json
acme_diags/set5_demo/: index.json
acme_diags/set7/: index.html  index.json
acme_diags/test_set3/: index.html  index.json
acme_diags/tier1b_cloud/: index.html  index.json
acme_diags/viewer/: annual_cycle_zonal_mean_viewer.py  arm_diags_viewer.py  default_viewer.py  enso_diags_viewer.py  main.py  (+1 more)
analysis_data_preprocess/: create_ERA5_climo.sh  create_ERA5_ext_climo.sh  create_GPCP_v3.2_climo.sh  create_global_tc_track_density.py  fix_units_1.5hr_time_shift_forTRMM.py  process_CALIPSOCOSP_v2.py  process_GPCPDAY_v3.3.py  process_GPCPDAY_v3.3.sh  process_ISCCPCOSP_v2.py  process_MISRCOSP_v2.py  process_MODISCOSP_v2.py  process_airs_spec_olr.py
auxiliary_tools/: 20231004-141433-issue-658-metrics-diff.xlsx  20231004-143428-issue-658-metrics-diff.xlsx  LCF_mixed-phase_partition_diagram.ipynb  LCF_mixed-phase_partition_diagram_CAL.ipynb  aerosol_budget.py  cdat_regression_test.ipynb  cdat_regression_test.py  complete_run_script.py  image_checker.py  issue-658-compare-metrics.py  metrics_checker.py  metrics_regresion_test.py  plot_native_grid_data.ipynb  plot_native_grid_data.py  run_tc_analysis.py  summarize_e3sm_diags.py  template_cdat_regression_script.py  template_cdat_regression_test.ipynb
conda/: .meta.yaml.un~  e3sm_diags_env.yml  e3sm_diags_env_dev.yml  e3sm_diags_env_dev_osx.yml  e3sm_diags_env_osx.yml  meta.yaml
conda-env/: ci.yml  dev-nompi.yml  dev.yml
docs/: README
e3sm_diags/: __init__.py  e3sm_diags_driver.py  e3sm_diags_vars.py  logger.py  run.py  utils.py
e3sm_diags.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/: run_all_sets_E3SM_machines.py  run_v2_5_0_all_sets_E3SM_machines.py  run_v2_6_0_all_sets_E3SM_machines.py  run_v2_7_0_all_sets_E3SM_machines.py
model_data_preprocess/: postprocessing_E3SM_data_for_AR_analysis.sh  postprocessing_E3SM_data_for_TC_analysis.sh  postprocessing_E3SM_data_for_single_sites.py  postprocessing_E3SM_data_for_single_sites_extraction.py
source/: .contributing.rst.swp  .input-data-requirement.rst.un~  add-new-diagnostics.rst  available-parameters.rst  conf.py  config-run.rst  contributing.rst  defining-parameters.rst  index.rst  input-data-requirement.rst  input-data-requirement.rst~  install-config-run.rst  install.rst  jupyter-examples.rst  model-to-model.rst  quick-guide-aims4.rst  quick-guide-edison.rst  quick-guide-rhea.rst  temp-at-diff-levels-model-vs-obs.rst
source-v2-2-0/: .contributing.rst.swp  config-run.rst
source-v2-4-0/: conf.py
tests/: complete_run.py  complete_run_params.py  complete_run_script.py  lat_lon.cfg  precc.nc  precl.nc  test.sh  test_all_sets.py  test_complete_run.py  test_native_grid.cfg  test_regression.py
(+9942 files in other folders)
